static/css/base.css
/* base classes */
@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
   
.listitem {
    font-size: 1.5rem;
    color: white;
}
.search-form {
    height: 2.5rem;
    width: 15rem;
}
.btn-danger {
    background-color: #d23430;
}
.btn-danger:hover {
    background-color: #bf2e2b;
}
.btn-secondary {
    background-color: #6c6a63;
}
.btn-secondary:hover {
    background-color: #5a5852;
}
.btn-purchase {
    background-color: #febd69 !important;
}
.btn-purchase:hover {
    background-color: #d69f58 !important;
}
.bold {
    font-weight: 600;
}
.search-form input {
    border: 0;
    width: calc(100% - 3rem);
    border-bottom: 1px solid black;
    background-color: white;
}
.search-form button {
    border: 0;
    border-bottom: 1px solid black;
    font-size: 1.5rem;
    width: 3rem;
    background-color: white;
}
.product-menu-listitem {
    font-size: 1.5rem;
    font-weight: 600;
}
.product-menu-submenu {
    font-size: 1.2rem;
    font-weight: 400;
    display: none;
}
.text-capitalize {
    text-transform: capitalize;
}
.btn-none {
    border: 0 !important;
    background-color: transparent;
}
.focused:focus {
    outline: 1px dotted #212121;
    outline: 5px auto -webkit-focus-ring-color;
}
.hover-item:hover {
    color: rgba(255, 255, 255, 0.6) !important;
    cursor: pointer;
}
.text-paragraph {
    font-size: 1rem;
}
.product-hover:hover {
    background-color: rgb(222, 245, 242);
} 
.product-style {
    width: 18rem !important;
    height: 22.5rem;
    background-color: white;
    border: 1px solid rgba(0, 0, 0, 0.2);
}
.product-style:hover,
.product-style:focus {
    background-color: rgb(222, 245, 242);
}
.product-style .img-thumbnail {
    width: 100%;
    height: 15rem;
    overflow: hidden;
    border: 0 !important;
}
.product-style .img-thumbnail img {
    width: 100%;
    height: 100%;
    object-fit: scale-down;
}
.product-style strong {
    color: black;
    font-weight: 500;
    font-family: 'Roboto', sans-serif;
}
.product-style div:last-of-type {
    bottom: 0;
    color: black !important;
}
.strike-through {
    text-decoration: line-through;
}
/* -------------- */

/* scroll bar styling */
    /* width */
    ::-webkit-scrollbar {
    width: 10px;
    }

    /* Track */
    ::-webkit-scrollbar-track {
    background: transparent;
    }

    /* Handle */
    ::-webkit-scrollbar-thumb {
    background: rgba(245, 245, 245, 0.5);
    }

    /* Handle on hover */
    ::-webkit-scrollbar-thumb:hover {
    background: #555;
    }
/* ------------------ */

body {
    font-family: 'Montserrat', sans-serif;
    background-color: rgb(0, 0, 0) !important;
    overflow: hidden;
}
#lg-header {
    height: 3rem;
    background-color: rgba(200, 222, 230, 0.2);
    z-index: 1;
    position: fixed;
    top: 0;
    left: 0;
    width: 360px;
    height: 100vh;
    border-right: 1px solid rgb(255, 255, 255);
}
#lg-header #nav-menu {
    border-bottom: 1px solid white;
}
#lg-header div:first-of-type {
    background-color: rgba(173, 216, 230, 0.2);
}
#base-product-menu {
    color: white;
    overflow-y: scroll;
    overflow-x: hidden;
}
#base-product-menu ul li {
    border-bottom: 1px solid white;
}
#base-product-menu ul li button i {
    font-size: 1rem;
    margin-left: 0.5rem;
}
#base-product-menu ul li ul {
    display: none;
}
#base-product-menu ul li ul li {
    border: 0;
}
#base-product-menu ul li ul li a {
    font-size: 1.2rem;
    width: 100% !important;
    height: 100% !important;
}
#account {
    top: 189px;
    left: 0;
    background-color: rgba(173, 216, 230, 0.2) !important;
    z-index: 1;
    display: none;
}
#account a {
    border-bottom: 1px solid white;
    display: block;
}
#account a:hover {
    background-color: rgba(245, 245, 245, 0.9);
    color: black !important;
}
#bag-menu {
    top: 189px;
    z-index: 10;
    height: calc(100vh - 189px);
    width: 360px;
    background-color: rgba(173, 216, 230, 0.2);
    overflow-y: scroll;
    overflow-x: hidden;
    display: none;
    font-weight: 500;
}
.bg-pale-white {
    background-color: rgba(255, 255, 255, 0.7) !important;
}
.img-container-bag-menu {
    height: 5rem;
    width: 5rem;
    object-fit: scale-down;
}

#overlay-menu {
    top: 0;
    right: 0;
    height: 100vh;
    z-index: 2;
    background-color: rgba(173, 216, 230, 0.3);
    width: calc(100vw - 360px);
    display: none;
    overflow: scroll;
}
#searching-loader {
    height: 100%;
    width: 100%;
}
#view-full-results {
    background-color: rgba(245, 245, 245, 0.9);
    width: 100%;
    margin: 0;
    height: 3rem;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}



h1 {
    letter-spacing: 0px;
    font-weight: 500;
    text-transform: capitalize;
    color: white;
    z-index: 1;
    font-family: 'Exo 2', sans-serif;
    white-space: nowrap;
}
#mma,#bjj,#muay_thai,#equipment {
    display: none;
}
.active-menu {
    display: block !important;
}
.product-menu {
    height: calc(100vh - 6rem);
    width: 15rem;
    background-color: whitesmoke;
    overflow-x: scroll;
}
#block-content {
    width: calc(100vw - 360px);
    position: absolute;
    right: 0;
    top: 0;
    height: 100vh;
    overflow-x: scroll;
    overflow-x: hidden;
    background-color: rgba(200, 222, 230, 0.2);
}
#base-img {
    position: fixed;
    top: 0;
    width: 100vw;
    height: 100vh;
    opacity: 0.5;
    object-fit: cover;
    pointer-events: none;
    z-index: -1;
}

.nav-item-hover:hover,
.nav-item-hover:focus {
    background-color: rgba(245, 245, 245, 0.9);
    color: black !important;
}

#search-header {
    background-color: rgba(245, 245, 245, 0.9);
}

.search-product {
    width: 10rem;
}
.search-product .img-container {
    width: 100%;
    overflow: hidden;
}
.search-product .img-container img {
    width: 100%;
    height: 100%;
    object-fit: scale-down;
}

@media only screen and (max-width: 992px) {
    #block-content {
        width: 100vw;
        right: 0;
    }
}


a {
    color: rgb(72, 107, 173);
}

/* Overwrite Toastr opacity */
.toast {
  opacity: 1 !important;
}

#toast-container > div {
  opacity: 1 !important; 
}

/* Allauth form Formatting */

.responsive-width {
    width: 80%;
}
.allauth-form label {
    font-weight: 600;
}
.allauth-form div {
    width: 100%;
}
.allauth-form button {
    width: 10rem;
}
@media only screen and (max-width: 768px) {
    .responsive-width {
        width: 100%;
    }
}

